# 12-10-project

./: .gitignore
install/: local_setup.sh  setup.sh
install/b2_description/share/b2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/door_bt/lib/door_bt/: door_bt_runner
install/door_bt/share/door_bt/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/elevator_bt/config/: elevator_lift1.yaml  elevator_lift2.yaml
install/elevator_bt/lib/elevator_bt/: elevator_bt_runner
install/elevator_bt/share/elevator_bt/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_description/share/go2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2w_description/share/go2w_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hinged_door_plugin/share/hinged_door_plugin/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lift_elevator_plugin/share/lift_elevator_plugin/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rl_action/lib/rl_action/: command
install/rl_action/share/rl_action/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rl_sar/include/dds/: config.h  dds.h  export.h  features.h  version.h
install/rl_sar/lib/: libddsc.so.0  libddscxx.so.0
log/: latest_build
src/RCI_quadruped_robot_navigation/: README.md  cache_models.py  fix_cached_models.py
src/RCI_quadruped_robot_navigation/bt/elevator_bt/: CMakeLists.txt
src/RCI_quadruped_robot_navigation/bt/elevator_bt/bt_trees/tests/: t_elevator_sequence2.xml
src/RCI_quadruped_robot_navigation/bt/elevator_bt/config/: elevator_lift1.yaml  elevator_lift2.yaml
src/RCI_quadruped_robot_navigation/bt/elevator_bt/include/elevator_bt/bt_nodes/: elevator_client.hpp  wait_cabin_at_target.hpp  wait_door_open.hpp
src/RCI_quadruped_robot_navigation/bt/elevator_bt/src/: main_bt.cpp
src/RCI_quadruped_robot_navigation/bt/elevator_bt/src/bt_nodes/: call_elevator_to_floor.cpp  ok_node.cpp  wait_cabin_at_target.cpp  wait_door_open.cpp
src/RCI_quadruped_robot_navigation/rl_sar/: CMakeLists.txt  package.xml
src/RCI_quadruped_robot_navigation/rl_sar/launch/: competition.launch.py  gazebo.launch.py  nav2.launch.py  slam_nav.launch.py
src/RCI_quadruped_robot_navigation/rl_sar/policy/b2/robot_lab/: config.yaml
src/RCI_quadruped_robot_navigation/rl_sar/worlds/: hotel.world  hotel_stairs.world  hotel_stairs_raw.world  remove_models.py
(+1255 files in other folders)
