<?xml version="1.0"?>
<package format="3">
    <name>rl_sar</name>
    <version>3.0.0</version>
    <description>The rl_sar package</description>

    <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>
    <author email="fanziqi614@gmail.com">Ziqi Fan</author>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>robot_state_publisher</depend>
    <depend>joint_state_publisher</depend>
    <depend>gazebo_ros</depend>
    <depend>nav2_bringup</depend>
    <depend>slam_toolbox</depend>
    <depend>rviz2</depend>
    <depend>turtlebot3_gazebo</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

